<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Typos">
    <string name="app_name">InfoBac</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_invata">Invață</string>
    <string name="bottom_navigation_exerseaza">Exersează</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="test_your_knowledge">Testează-ți cunoștințele</string>
    <string name="quiz_game">Quiz game</string>
    <string name="your_progress">Progresul tău</string>
    <string name="completed_lessons">Lecții completate</string>
    <string name="completed_exercises">Exerciții rezolvate</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_text">Feedback-ul și sugestile sunt bine venite. Lasă un review în Play Store!</string>
    <string name="completed">COMPLETAT</string>
    <string name="indroduction">Introducere</string>
    <string name="pseudocod">Pseudocod</string>
    <string name="varied_level">NIVEL VARIAT</string>
    <string name="medium_level">NIVEL MEDIU</string>
    <string name="next">ÎNAINTE</string>
    <string name="back">ÎNAPOI</string>
    <string name="Answer">RĂSPUNDE</string>
    <string name="Hide_solution">Ascunde soluția</string>
    <string name="Show_solution">Afișează soluția</string>
    <string name="wrong">GREȘIT</string>
    <string name="continua">CONTINUĂ</string>
    <string name="despreApp">Salut, numele meu este Cezar, sunt dezvoltatorul acestei aplicații. Am creat această aplicație cu scopul de a îi ajuta pe cei ce doresc să se pregătească pentru examenul de bacalaureat la informatică. Sper să iți fie de folos, baftă la invățat!</string>
    <string name="are_you_sure">Ești sigur că dorești să resetezi progresul?</string>
    <string name="completed_lesson">Lecție completă</string>
    <string name="completed_quiz">Quiz complet</string>
    <string name="change_quiz">Schimbă quizul</string>
    <string name="reset_progress">Resetează Progresul</string>
    <string name="report_bug">Reportează un bug</string>
    <string name="play_store">Play store</string>
    <string name="about">Despre</string>
    <string name="student">Student</string>
    <string name="choose_question_set" tools:ignore="Typos">Alege setul de întrebări</string>
    <string name="Correct_answer_was">Răspunsul corect era: %s</string>
    <string name="cpp">Bazele C++</string>
    <string name="soon">ÎN CURÂND…</string>
    <string name="introducere">Introducere</string>
    <string name="start_learning">Incepe să inveți</string>
    <string name="keep_learning">Continuă să inveți</string>
    <string name="congrats_problem_complete">Felicitări, problemă rezolvată!</string>
    <string name="congrats_subject_complete">Felicitări, subiect rezolvat!</string>
    <string name="date_complexe">Date complexe</string>
    <string name="lec_ie_nou">Lecție nouă</string>
</resources>
