<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="io.github.craciuncezar.infobac.controllers.HomeFragment" />

        <variable
            name="viewModel"
            type="io.github.craciuncezar.infobac.viewmodels.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controllers.HomeFragment">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:stateListAnimator="@anim/lift_on_touch"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?progressGradient"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@string/your_progress"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/completed_lessons"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/progressBarLessons"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="6dp"
                    android:progress="@{viewModel.totalLessonProgress}"
                    android:progressDrawable="?progressBarRounded" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/completed_exercises"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/progressBarExercises"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="6dp"
                    android:progress="@{viewModel.numberOfCompletedExercises}"
                    android:progressDrawable="?progressBarRounded" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewLearn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()-> fragment.learnCardPressed()}"
            android:stateListAnimator="@anim/lift_on_touch"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?homeGradient"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".80"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewLearn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingBottom="4dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Incepe sa inveti" />

                    <TextView
                        android:id="@+id/textViewCurrentLesson"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="Introducere" />
                </LinearLayout>

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_start" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()-> fragment.quizGamePressed()}"
            android:stateListAnimator="@anim/lift_on_touch"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?homeGradient"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".80"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingBottom="4dp"
                        android:text="@string/test_your_knowledge"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quiz_game"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_quiz" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->fragment.feedbackPressed()}"
            android:stateListAnimator="@anim/lift_on_touch"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?homeGradient"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".80"
                    android:gravity="center_vertical"
                    android:paddingBottom="4dp"
                    android:text="@string/feedback"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".80"
                    android:text="@string/feedback_text"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>